feat: seeder, location and food
