# api/food/router.go
@@ -1,0 +1,7 @@
+package food
+
+import "github.com/labstack/echo/v4"
+
+func Router(g *echo.Group, h Handler) {
+	g.POST("", h.Add)
+}
